--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,13 @@ dependencies = [
 requires-python = ">=3.8,<3.13"
 
 [tool.setuptools]
-packages = ["speech"]
+include-package-data = true
+
+[tool.setuptools.package-data]
+"speech" = ["lib/*.dll"]
+
+[tool.setuptools.packages.find]
+where = ["."]
 
 [tool.autopep8]
 aggressive = 2
@@ -29,3 +35,6 @@ exclude = "venv"
 [project.urls]
 Homepage = "https://github.com/actlaboratory/speech"
 Repository = "https://github.com/actlaboratory/speech"
+
+[project.entry-points."pyinstaller40"]
+hook-dirs = "speech.__pyinstaller__:get_hook_dirs"
